fix spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,7 +117,7 @@ strong, b {
 
 #content-wrapper {
   position: relative;
-  z-index: 1;
+  z-index: 0;
   min-height: 100vh;
 }
 
